--- a/space-habitat-builder-/.godot/editor/editor_layout.cfg
+++ b/space-habitat-builder-/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/snapyy2.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://blender_assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://blender_assets/sleeping_bag.blend")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://blender_habitats/", "res://blender_assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,11 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/snappytest.tscn", "res://scenes/snapyy2.tscn")
-current_scene="res://scenes/snapyy2.tscn"
+open_scenes=PackedStringArray("res://scenes/snappytest.tscn", "res://scenes/sleeping_area.tscn", "res://scenes/plant.tscn", "res://scenes/medical_room.tscn")
+current_scene="res://scenes/snappytest.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -51,8 +52,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(383, 135, 1164, 695)
+floating_window_screen=0
 
 [ShaderEditor]
 
